--- a/Sams-Cakes_frontend/html/addProvider.html
+++ b/Sams-Cakes_frontend/html/addProvider.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="../css/styleAPR.css">
-        <link rel="shortcut icon" href="../img/cupcake.png">
-        <title> Sam's Cakes</title>
-    </head>
-    <body>
-        <section class="FormProvider">
-            <form>
-                <img src="../img/userPr.png" class="logo">
-                <h5>Add the requested data</h5>
-                <input type="text" placeholder="Provider ID.">
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Address">
-                <input type="text" placeholder="Postal Code">
-                <input type="text" placeholder="Telephone">
-                <button class="button"><span>Edit</span></button>
-                <button class="button">Save</button>
-                <button class="button">Cancel</button>
-            </form>
-        </section>
-        <!--<script type="text/javascript" src="../js/addProviderBtnEffect.js"></script> -->
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="../css/styleAPR.css   ">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="shortcut icon" href="../img/cupcake.png">
+    <title>Add Provider</title>
+</head>
+<body>
+    <section class="FormProvider">
+        <form>
+            <img src="../img/userPr.png" class="logo">
+            <h5>Add the requested data</h5>
+            <input type="text" placeholder="Provider ID.">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Address">
+            <input type="text" placeholder="Postal Code">
+            <input type="text" placeholder="Telephone">
+            <button class="button">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Edit
+            </button>
+            <button class="button">Save</button>
+            <button class="button">Cancel</button>
+        </form>
+    </section>
+    <!--<script type="text/javascript" src="addP.js"></script> -->
+</body>
+
 </html>
