--- a/Sams-Cakes_frontend/html/messageTeam.html
+++ b/Sams-Cakes_frontend/html/messageTeam.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="Message">
-            <div class="patrick">
+            <div class="animate__bounce">
                 <img src="../img/Patrick.png" alt="" class="img-menu">
             </div>
             <div class="Text">
