--- a/Sams-Cakes_frontend/html/menuAdmin.html
+++ b/Sams-Cakes_frontend/html/menuAdmin.html
@@ -42,6 +42,9 @@
                         <button class="buttons" id="btnVO">
                             View Orders
                         </button>
+                        <button class="buttonsLogOff" id="btnLOff">
+                            Log off
+                        </button>
                     </div>
                 </div>
             </div>
