--- a/Sams-Cakes_frontend/html/addProvider.html
+++ b/Sams-Cakes_frontend/html/addProvider.html
@@ -24,34 +24,38 @@
                         <input type="text">
                         <span data-placeholder="Name"></span>
                     </div>
-                    <div class="txtfield">
-                        <input type="text">
-                        <span data-placeholder="Address"></span>
+                    <div class="address">
+                        <div class="txtfield">
+                            <input type="text">
+                            <span data-placeholder="Address"></span>
+                        </div>
                     </div>
-                    <div class="txtfield">
-                        <input type="text">
-                        <span data-placeholder="Postal Code"></span>
-                    </div>
-                    <div class="txtfield">
-                        <input type="text">
-                        <span data-placeholder="Telephone"></span>
+                    <div class="aditional">
+                        <div class="txtfield">
+                            <input type="text">
+                            <span data-placeholder="Postal Code"></span>
+                        </div>
+                        <div class="txtfield">
+                            <input type="text">
+                            <span data-placeholder="Telephone"></span>
+                        </div>
                     </div>
                     <div class="botones">
-                        <a href="">
-                            <span></span>
+                        <a href="" class="AEC-boton">
+                            <span ></span>
                             <span></span>
                             <span></span>
                             <span></span>
                             Edit
                         </a>
-                        <a href="">
+                        <a href="" class="AEC-boton">
                             <span></span>
                             <span></span>
                             <span></span>
                             <span></span>
                             Save
                         </a>
-                        <a href="">
+                        <a href="" class="AEC-boton">
                             <span></span>
                             <span></span>
                             <span></span>
