--- a/Sams-Cakes_frontend/html/addProvider.html
+++ b/Sams-Cakes_frontend/html/addProvider.html
@@ -55,7 +55,7 @@
                             <span></span>
                             Save
                         </a>
-                        <a href="" class="AEC-boton">
+                        <a href="menuAdmin.html" class="AEC-boton">
                             <span></span>
                             <span></span>
                             <span></span>
