--- a/Sams-Cakes_frontend/html/addUser.html
+++ b/Sams-Cakes_frontend/html/addUser.html
@@ -49,7 +49,7 @@
                         <div class="botones">
                             <button class="AEC-boton">Edit</button>
                             <button class="AEC-boton">Save</button>
-                            <button class="AEC-boton">Cancel</button>
+                            <button class="AEC-boton" role="link" onclick="window.location='menuAdmin.html'">Cancel</button>
                         </div>
                     </div>
                 </section>
