--- a/Sams-Cakes_frontend/html/menuAdmin.html
+++ b/Sams-Cakes_frontend/html/menuAdmin.html
@@ -17,32 +17,32 @@
                 <div class="menu">
                     <img src="../img/Imagen4.png" alt="" class="img-menu">
                     <h3 class="animate__heartBeat">ADMINISTRATOR</h3>
-                        <button class="buttons" id="btnAddPro">
+                        <button class="buttons" role="link" onclick="window.location='addProduct.html'" id="btnAddPro">
                             Add Product
                         </button>
-                        <button class="buttons" id="btnAddProv">
+                        <button class="buttons" role="link" onclick="window.location='addProvider.html'" id="btnAddProv">
                             Add Provider
                         </button>
-                        <button class="buttons" id="btnAddUser">
+                        <button class="buttons" role="link" onclick="window.location='addUser.html'" id="btnAddUser">
                             Add User
                         </button>
-                        <button class="buttons" id="btnDelPro">
+                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnDelPro">
                             Delete Product
                         </button>
-                        <button class="buttons" id="btnDelProv">
+                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnDelProv">
                             Delete Provider
                         </button>
-                        <button class="buttons" id="btnDelProv">
+                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnDelProv">
                             Delete Provider
                         </button>
-                        <button class="buttons" id="btnVS">
+                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnVS">
                             View Sales
                         </button>
-                        <button class="buttons" id="btnVO">
+                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnVO">
                             View Orders
                         </button>
-                        <button class="buttonsLogOff" id="btnLOff">
-                            Log off
+                        <button class="buttonsLogOff" role="link" onclick="window.location='login.html'" id="btnLOff">
+                            Log out
                         </button>
                 </div>
             </div>
