--- a/Sams-Cakes_frontend/html/addProduct.html
+++ b/Sams-Cakes_frontend/html/addProduct.html
@@ -45,7 +45,7 @@
                         <div class="botones">
                             <a href="#">Edit</a>
                             <a href="#">Save</a>
-                            <a href="#">Cancel</a>
+                            <a href="menuAdmin.html">Cancel</a>
                         </div>
                     </div>
                 </section>
