Menu Admin Remasterizado

--- a/Sams-Cakes_frontend/html/menuAdmin.html
+++ b/Sams-Cakes_frontend/html/menuAdmin.html
@@ -17,31 +17,31 @@
                 <div class="menu">
                     <img src="../img/Imagen4.png" alt="" class="img-menu">
                     <h3 class="animate__heartBeat">ADMINISTRATOR</h3>
-                        <button class="buttons" role="link" onclick="window.location='addProduct.html'" id="btnAddPro">
+                        <button class="buttons btnAddPro" role="link" onclick="window.location='addProduct.html'">
                             Add Product
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='addProvider.html'" id="btnAddProv">
+                        <button class="buttons btnAddProv" role="link" onclick="window.location='addProvider.html'">
                             Add Provider
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='addUser.html'" id="btnAddUser">
+                        <button class="buttons btnAddUser" role="link" onclick="window.location='addUser.html'">
                             Add User
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnDelPro">
+                        <button class="buttons btnDelPro" role="link" onclick="window.location='messageTeam.html'">
                             Delete Product
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnDelProv">
+                        <button class="buttons btnDelProv" role="link" onclick="window.location='messageTeam.html'">
                             Delete Provider
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnDelProv">
-                            Delete Provider
+                        <button class="buttons btnDelUser" role="link" onclick="window.location='messageTeam.html'">
+                            Delete User
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnVS">
+                        <button class="buttons btnVS" role="link" onclick="window.location='messageTeam.html'">
                             View Sales
                         </button>
-                        <button class="buttons" role="link" onclick="window.location='messageTeam.html'" id="btnVO">
+                        <button class="buttons btnVO" role="link" onclick="window.location='messageTeam.html'">
                             View Orders
                         </button>
-                        <button class="buttonsLogOff" role="link" onclick="window.location='login.html'" id="btnLOff">
+                        <button class="buttonsLogOff" role="link" onclick="window.location='login.html'">
                             Log out
                         </button>
                 </div>
