Cashier Wind. FINISH

--- a/Sams-Cakes_frontend/html/menuCashier.html
+++ b/Sams-Cakes_frontend/html/menuCashier.html
@@ -17,19 +17,19 @@
                 <div class="menu">
                     <img src="../img/cupcake.png" alt="" class="img-menu">
                     <h3 class="animate__heartBeat">C A S H I E R</h3>
-                        <button class="buttons" id="btnAddPro">
+                        <button class="buttons" role="link" onclick="window.location='messageTeamCash.html'" id="btnAddPro">
                             Make a Sale
                         </button>
-                        <button class="buttons" id="btnAddProv">
+                        <button class="buttons" role="link" onclick="window.location='messageTeamCash.html'" id="btnAddProv">
                             Take an Order
                         </button>
-                        <button class="buttons" id="btnAddUser">
+                        <button class="buttons" role="link" onclick="window.location='messageTeamCash.html'" id="btnAddUser">
                             View Sales
                         </button>
-                        <button class="buttons" id="btnDelPro">
+                        <button class="buttons" role="link" onclick="window.location='messageTeamCash.html'" id="btnDelPro">
                             View Orders
                         </button>
-                        <button class="buttonsLogOff" id="btnLOff">
+                        <button class="buttonsLogOff" role="link" onclick="window.location='login.html'" id="btnLOff">
                             Log off
                         </button>
                 </div>
