--- a/Sams-Cakes_frontend/html/messageTeamCash.html
+++ b/Sams-Cakes_frontend/html/messageTeamCash.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800&amp;display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/message.css">
+        <link rel="stylesheet" href="../css/messageCash.css">
         <link rel="stylesheet" href="../css/animate.css">
         <link rel="shortcut icon" href="../img/cupcake.png">
         <title>
@@ -23,7 +23,7 @@
                 </label>
             </div>
             <div class="button">
-                <a href="menuAdmin.html" class="AEC-boton">
+                <a href="menuCashier.html" class="AEC-boton">
                     <span ></span>
                     <span></span>
                     <span></span>
