--- a/Sams-Cakes_frontend/html/login.html
+++ b/Sams-Cakes_frontend/html/login.html
@@ -25,9 +25,11 @@
                         <span data-placeholder="Password"></span>
                     </div>
                     <label id="error"></label>
-                    <img src="../img/show.png" class="sh-button" id="sh">
-                    <button class="login-boton" id="btnCashier">Sign in as Cashier</button>
-                    <button class="login-boton" id="btnAdmin">Sign in as Admin</button>
+                    <div class="botones">
+                        <img src="../img/show.png" class="sh-button" id="sh">
+                        <button class="login-boton" id="btnCashier">Sign in as Cashier</button>
+                        <button class="login-boton" id="btnAdmin">Sign in as Admin</button>
+                    </div>
                 </div>
             </div>
             <div class="login-background">
